--- a/style.css
+++ b/style.css
@@ -16,6 +16,47 @@ This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
 */
 
+/* Elements */
+code {
+  background-color: var(--wp--preset--color--offset);
+  border: 1px solid var(--wp--preset--color--separator);
+  border-radius: 0.5rem;
+  font-size: 0.875em;
+  padding: 0.125em;
+}
+
+pre {
+  padding: 0;
+}
+
+pre > code {
+  padding: 1em;
+}
+
+/* Post Comments */
+.wp-block-post-comments-form textarea {
+  background-color: var(--wp--preset--color--offset);
+  border: 1px solid var(--wp--preset--color--separator);
+  border-radius: 0.5rem;
+}
+
+.wp-block-post-comments-form textarea:focus {
+  border-color: var(--wp--preset--color--primary);
+  box-shadow: 0 0 0 1px var(--wp--preset--color--primary);
+}
+
+/* Post Date */
+.wp-block-post-date {
+  display: inline-block;
+}
+
+.edit-post-visual-editor__post-title-wrapper
+  > :where(:not(.alignleft):not(.alignright):not(.alignfull)) {
+  max-width: var(--wp--style--global--wide-size) !important;
+  text-align: center;
+}
+
+/* Search */
 @media (max-width: 599px) {
   .wp-block-search {
     display: none;
@@ -23,11 +64,19 @@ Use it to make something cool, have fun, and share what you've learned with othe
 }
 
 .wp-block-search__input {
-  border: 1px solid #ccc;
+  background-color: var(--wp--preset--color--offset);
+  border: 1px solid var(--wp--preset--color--separator);
   border-radius: 0.5rem;
 }
 
 .wp-block-search__input:focus {
   border-color: var(--wp--preset--color--primary);
   box-shadow: 0 0 0 1px var(--wp--preset--color--primary);
+}
+
+/* Separator */
+.wp-block-separator:not(.is-style-wide):not(.is-style-dots) {
+  border-width: 1px;
+  opacity: 0.5;
+  width: clamp(4rem, 11vw, 12rem);
 }
