--- a/templates/hidden-title.html
+++ b/templates/hidden-title.html
@@ -1,7 +1,9 @@
-<!-- wp:template-part {"slug":"header"} /-->
+<!-- wp:template-part {"slug":"header","theme":"david-calhoun"} /-->
 
 <!-- wp:group {"tagName":"main"} -->
 <main class="wp-block-group">
   <!-- wp:post-content {"layout":{"type":"constrained"}} /-->
 </main>
 <!-- /wp:group -->
+
+<!-- wp:template-part {"slug":"footer","theme":"david-calhoun"} /-->
