--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 <!-- wp:template-part {"slug":"header","theme":"david-calhoun"} /-->
 
-<!-- wp:group {"tagName":"main","layout":{"type":"constrained"}} -->
+<!-- wp:group {"tagName":"main","layout":{"type":"constrained","wideSize":"80rem"}} -->
 <main class="wp-block-group">
   <!-- wp:query {"queryId":51,"query":{"perPage":10,"pages":0,"offset":0,"postType":"post","order":"desc","orderBy":"date","author":"","search":"","exclude":[],"sticky":"","inherit":false},"displayLayout":{"type":"list","columns":3},"align":"wide","layout":{"type":"default"}} -->
   <div class="wp-block-query alignwide">
@@ -20,9 +20,9 @@
       >
         <!-- wp:group {"style":{"spacing":{"blockGap":"var:preset|spacing|10"}},"layout":{"type":"flex","orientation":"vertical","justifyContent":"left"}} -->
         <div class="wp-block-group">
-          <!-- wp:post-date {"format":"j F Y","fontSize":"base"} /-->
+          <!-- wp:post-date {"format":"j F Y","fontSize":"small"} /-->
 
-          <!-- wp:post-terms {"term":"category","fontSize":"base"} /-->
+          <!-- wp:post-terms {"term":"category","fontSize":"small"} /-->
         </div>
         <!-- /wp:group -->
       </div>
