--- a/templates/page.html
+++ b/templates/page.html
@@ -3,7 +3,17 @@
 <!-- wp:group {"tagName":"main"} -->
 <main class="wp-block-group">
   <!-- wp:group {"layout":{"type":"constrained"}} -->
-  <div class="wp-block-group"><!-- wp:post-title {"level":1} /--></div>
+  <div class="wp-block-group">
+    <!-- wp:separator -->
+    <hr class="wp-block-separator has-alpha-channel-opacity" />
+    <!-- /wp:separator -->
+
+    <!-- wp:post-title {"textAlign":"center","level":1,"align":"wide"} /-->
+
+    <!-- wp:separator -->
+    <hr class="wp-block-separator has-alpha-channel-opacity" />
+    <!-- /wp:separator -->
+  </div>
   <!-- /wp:group -->
 
   <!-- wp:post-content {"layout":{"type":"constrained"}} /-->
