--- a/templates/single.html
+++ b/templates/single.html
@@ -2,11 +2,33 @@
 
 <!-- wp:group {"tagName":"main"} -->
 <main class="wp-block-group">
+  <!-- wp:group {"layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"center","orientation":"horizontal"}} -->
+  <div class="wp-block-group">
+    <!-- wp:post-date {"textAlign":"center","format":"j F Y","fontSize":"small"} /-->
+
+    <!-- wp:post-terms {"term":"category"} /-->
+  </div>
+  <!-- /wp:group -->
+
   <!-- wp:group {"layout":{"type":"constrained"}} -->
-  <div class="wp-block-group"><!-- wp:post-title {"level":1} /--></div>
+  <div class="wp-block-group">
+    <!-- wp:separator -->
+    <hr class="wp-block-separator has-alpha-channel-opacity" />
+    <!-- /wp:separator -->
+
+    <!-- wp:post-title {"textAlign":"center","level":1,"align":"wide"} /-->
+
+    <!-- wp:separator -->
+    <hr class="wp-block-separator has-alpha-channel-opacity" />
+    <!-- /wp:separator -->
+  </div>
   <!-- /wp:group -->
 
   <!-- wp:post-content {"layout":{"type":"constrained"}} /-->
+
+  <!-- wp:separator {"className":"is-style-dots"} -->
+  <hr class="wp-block-separator has-alpha-channel-opacity is-style-dots" />
+  <!-- /wp:separator -->
 
   <!-- wp:group {"layout":{"type":"constrained"}} -->
   <div class="wp-block-group">
